@@ -48,9 +48,9 @@ copyright = u'2012, Christian Andersson and Claus Führer'
 # built documents.
 #
 # The short X.Y version.
-version = '2.1'
+version = '2.1.1'
 # The full version, including alpha/beta/rc tags.
-release = '2.1'
+release = '2.1.1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
@@ -107,7 +107,7 @@ html_theme_path = ['../themes']
 
 # The name for this set of Sphinx documents.  If None, it defaults to
 # "<project> v<release> documentation".
-html_title = 'Assimulo 2.1 documentation'
+html_title = 'Assimulo 2.1.1 documentation'
 
 # A shorter title for the navigation bar.  Default is the same as html_title.
 #html_short_title = None
